--- a/travelvlog/src/components/Navbar.css
+++ b/travelvlog/src/components/Navbar.css
@@ -42,3 +42,18 @@
 
 
 }
+
+@media (min-width: 1200px) {
+    
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+  
+}
+@media (min-width: 480px) and (max-width: 768px) {
+    
+}
+@media (min-width: 320px) and (max-width: 480px) {
+    
+}
+
