--- a/travelvlog/src/components/Sectioncmpany.css
+++ b/travelvlog/src/components/Sectioncmpany.css
@@ -1,6 +1,34 @@
 @media (max-width: 767px) {
     .company{
-        margin-top: 250px;
+        position: relative;
+        top: 280px;
+      left: 100px;
+     size: 100px;
+
+
+    }
+    .company1{
+       width: 211.83px;
+height: 32px;
+gap: 0px;
+opacity: 0px;
+
+     position: relative;
+     left: 150px;
+    }
+    .company4{
+        width: 200px;
+        position: relative;
+        top: 100px;
+        right: 180px;
+        height: 50px;
+    }
+    .company5{
+        width: 200px;
+        position: relative;
+        top: 100px;
+        right: 180px;
+        height: 50px;
     }
   
 }
